# structlog-config

./: .copier-answers.yml  .envrc  .gitignore  .tool-versions  AGENTS.md  CHANGELOG.md  Justfile  README.md  TODO  commands.md  instructions.md  mise.toml  playground.py  pyproject.toml
.cursor/rules/: general.mdc  python.mdc
.github/instructions/: python.instructions.md
.github/workflows/: build_and_publish.yml  repo-sync.yml
examples/: basic_example.py  exception_logging_demo.py  fastapi_dependency_error.py  fastapi_server.py
playground/: pydantic_settings.py
structlog_config/: __init__.py  constants.py  env.py  env_config.py  environments.py  exception_logging.py  factory.py  fastapi_access_logger.py  formatters.py  hook.py  levels.py  packages.py  pytest_plugin.py  stdlib_logging.py  trace.py
structlog_config/pytest_plugin/: __init__.py  capture.py  constants.py  output.py  reporting.py  subprocess_capture.py
tests/: capture_utils.py  conftest.py  test_env.py  test_environment.py  test_examples.py  test_exception_hook.py  test_fastapi_access_logger.py  test_finalization.py  test_formatters.py  test_formatters_pathprettifier.py  test_hook.py  test_import.py  test_json_logging.py  test_levels.py  test_log_destination.py  test_logging.py  test_pytest_output_capture.py  test_pytest_plugin.py  test_stream_coordination.py  test_trace.py  utils.py
tests/pytest_plugin/: conftest.py  test_capture.py  test_configuration.py  test_lifecycle.py  test_terminal_summary.py
