[project]
name = "structlog-config"
version = "0.14.0"
description = "A comprehensive structlog configuration with sensible defaults for development and production environments, featuring context management, exception formatting, and path prettification."
keywords = ["logging", "structlog", "json-logging", "structured-logging"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "orjson>=3.10.15",
    "structlog>=25.2.0",
    "pytest-plugin-utils>=0.1.1",
]
urls = { "Repository" = "https://github.com/iloveitaly/structlog-config" }
authors = [{ name = "Michael Bianco", email = "mike@mikebian.co" }]

[project.optional-dependencies]
fastapi = [
    "fastapi",
    "fastapi-ipware>=0.1.0",
    "starlette-context",
]

[project.entry-points.pytest11]
structlog_config = "structlog_config.pytest_plugin"

[build-system]
requires = ["uv_build>=0.11.0,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
# avoids the src/ directory structure
module-root = ""

[tool.uv.sources]

[dependency-groups]
test-additions = [
    "whenever>=0.9.3",
    "beautiful-traceback>=0.8.0",
    "activemodel>=0.18.0",
    "sqlalchemy>=2.0.48",
    "typeid-python>=0.3.3",
]
dev = [
    "pytest>=8.3.4",
    "httpx>=0.28.1",
    "pyright[nodejs]>=1.1.408",
    "ruff>=0.15.0",
    "coverage>=7.13.4",
    "pytest-cov>=7.0.0",
    "covdefaults>=2.3.0",
]

[tool.pyright]
exclude = ["examples/", "playground/", "tmp/", ".venv/", "tests/"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing --cov-report=html:tmp/htmlcov"
testpaths = ["tests"]

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["structlog_config"]

[tool.coverage.report]
fail_under = 50

[tool.ruff]
extend-exclude = ["playground.py", "playground/"]

[tool.uv.sources.beautiful-traceback]
git = "https://github.com/iloveitaly/beautiful-traceback.git"
